samples/_failures_safe/1761248693_48dced_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60d62c06.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_60d62c06.c:160:20: error: expected identifier or ‘(’ at end of input
  160 |             struct Graph
      |                    ^~~~~
./samples/SAFE/__tmp_60d62c06.c:160:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60d62c06.c:160:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60d62c06.c:160:20: error: expected declaration or statement at end of input
